--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'org.sonarqube'
 
 android {
     compileSdkVersion 28
@@ -12,8 +13,14 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            debuggable false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+
+        debug {
+            applicationIdSuffix ".debug"
+            debuggable true
         }
     }
     testOptions.unitTests.includeAndroidResources = true
@@ -28,4 +35,22 @@ dependencies {
     androidTestImplementation 'com.android.support.test:rules:1.0.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+}
+
+sonarqube {
+    properties {
+        def libraries = project.android.sdkDirectory.getPath() + "/platforms/android-28/android.jar"/* + ", build/intermediates/exploded-aar*//**//*classes.jar"*/
+
+        property "sonar.projectKey", "DevOpsApp"
+        property "sonar.projectBaseDir", "."
+
+        property "sonar.sources", "app/src/main/java"
+
+        property "sonar.libraries", libraries
+        property "sonar.java.test.libraries", libraries
+        property "sonar.binaries", "build/intermediates/classes/debug"
+        property "sonar.tests", "app/src/test/java, app/src/androidTest/java"
+        property "sonar.java.test.binaries", "app/build/intermediates/classes/debug"
+        property "sonar.android.lint.report", "app/build/reports/lint-results.xml"
+    }
 }
