Add product flavors and build types

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,14 @@ apply plugin: 'com.android.application'
 apply plugin: 'org.sonarqube'
 
 android {
+    signingConfigs {
+        upload {
+            keyAlias 'upload'
+            keyPassword 'BruceWayne'
+            storeFile file('/Users/faleksic/keystores/upload-keystore')
+            storePassword 'BruceWayne'
+        }
+    }
     compileSdkVersion 28
     defaultConfig {
         applicationId "hr.faleksic.devopsapp"
@@ -10,11 +18,13 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        signingConfig signingConfigs.upload
     }
     buildTypes {
         release {
             debuggable false
             minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
 
@@ -23,11 +33,22 @@ android {
             debuggable true
         }
     }
+    flavorDimensions "myflavor"
+    productFlavors {
+        demo {
+            applicationIdSuffix ".demo"
+            versionNameSuffix "-demo"
+        }
+        full {
+            applicationIdSuffix ".full"
+            versionNameSuffix "-full"
+        }
+    }
     testOptions.unitTests.includeAndroidResources = true
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
