Change firebase test command

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
       - run:
           name: Build debug APK and release APK
           command: |
-            ./gradlew :app:assembleDebug
+            ./gradlew :app:assembleFullDebug
             ./gradlew :app:assembleAndroidTest
       - run:
           name: Store Google Service Account
@@ -27,10 +27,7 @@ jobs:
       - run:
           name: Test with Firebase Test Lab
           command: >
-            sudo gcloud firebase test android run \ 
-              --app <local_server_path>/<app_apk>.apk \ 
-              --test <local_server_path>/<app_test_apk>.apk \ 
-              --results-bucket cloud-test-${GOOGLE_PROJECT_ID}
+            sudo gcloud firebase test android run --app <local_server_path>/<app_apk>.apk --test <local_server_path>/<app_test_apk>.apk
       - run:
           name: Install gsutil dependency and copy test results data
           command: |
