--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,13 @@ buildscript {
     repositories {
         google()
         jcenter()
+
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.4.2'
         classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.7.1"
 
         // NOTE: Do not place your application dependencies here; they belong
