--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -122,7 +122,7 @@ jobs:
       - *save_gems_cache
       - run:
           name: Deploy to Crashlytics Beta
-          command: bundle exec fastlane deploy_to_crashlytics
+          command: bundle exec fastlane beta
 
   deploy_play_store:
     <<: *android_config
